<resources>
    <string name="app_name">Python_quizz</string>
    <string name="tv_score">Score: 0</string>
    <string name="btn_submit">Submit</string>
    <string name="Correct_answer">Correct answers:      X</string>
    <string name="wrong_answer">Wrong answers:          X</string>
    <string name="percentage">Percentage:              X</string>
    <string name="status">Status:X</string>
    <string name="btn_tryagin">Try Again 😞</string>

    <string name="Intro">Test your understanding of Python operators and expressions.</string>
    <string name="high_score">Passing Marks:50%</string>
    <string name="start_quizz">Start Quizz</string>
    <string name="tv_question">question: 1/10</string>
    <string name="timer">00:30</string>
    <string name="pre">Previous</string>
    <string name="next">Next</string>
    <string name="question_1">Which one of the following is correct way of declaring and initialising a variable, x with value 5?</string>
    <string name="qustion_1_A"> int x , x=5</string>
    <string name="qustion_1_B">int x=5</string>
    <string name="qustion_1_C"> x=5</string>
    <string name="qustion_1_D">declare x=5</string>
    <string name="answer_1"> x=5</string>

    <string name="question_2"> Which of the following is not valid variable name in Python?</string>
    <string name="qustion_2_A"> _var</string>
    <string name="qustion_2_B">var_name</string>
    <string name="qustion_2_C"> var11</string>
    <string name="qustion_2_D">11var</string>
    <string name="answer_2"> 11var</string>

    <string name="question_3">Which of the following is incorrect regarding variables in Python?</string>
    <string name="qustion_3_A"> Variable names in Python cannot start with number. However, it can contain number in any other position of variable name</string>
    <string name="qustion_3_B">Variable names can start with an underscore.</string>
    <string name="qustion_3_C"> Data type of variable names should not be declared</string>
    <string name="qustion_3_D">None of the above</string>
    <string name="answer_3"> None of the above</string>

    <string name="question_4">Which of the following will give error?</string>
    <string name="qustion_4_A">a=b=c=1</string>
    <string name="qustion_4_B">a,b,c=1</string>
    <string name="qustion_4_C"> a,b,c=1, â€œpythonâ€, 1.5</string>
    <string name="qustion_4_D">None of the above</string>
    <string name="answer_4"> a,b,c=1</string>

    <string name="question_5"> All keyword in python are in</string>
    <string name="qustion_5_A"> Lowercase</string>
    <string name="qustion_5_B">Uppercase</string>
    <string name="qustion_5_C"> Both uppercase and Lowercase1</string>
    <string name="qustion_5_D">None of the above</string>
    <string name="answer_5"> Both uppercase and Lowercase</string>

    <string name="question_6">  What is the output of the expression  print(-18 // 4)</string>
    <string name="qustion_6_A"> -4</string>
    <string name="qustion_6_B">4</string>
    <string name="qustion_6_C"> 5</string>
    <string name="qustion_6_D">-5</string>
    <string name="answer_6"> 5</string>

    <string name="question_7"> All keyword in python are in</string>
    <string name="qustion_7_A"> Lowercase</string>
    <string name="qustion_7_B">Uppercase</string>
    <string name="qustion_7_C"> Both uppercase and Lowercase1</string>
    <string name="qustion_7_D">None of the above</string>
    <string name="answer_7"> Both uppercase and Lowercase</string>

    <string name="question_8">  What is output for :2 * 2 **3</string>
    <string name="qustion_8_A"> 12</string>
    <string name="qustion_8_B">64</string>
    <string name="qustion_8_C"> 16</string>
    <string name="qustion_8_D">36</string>
    <string name="answer_8"> 16</string>

    <string name="question_9"> Which of the function among will return 4 on the set s = {3, 4, 1, 2}</string>
    <string name="qustion_9_A">Sums(s)</string>
    <string name="qustion_9_B">Len(s)</string>
    <string name="qustion_9_C">Min(s)</string>
    <string name="qustion_9_D">Four(s)</string>
    <string name="answer_9">Len(s)</string>

    <string name="question_10">  Which module is used in python to create Graphics?</string>
    <string name="qustion_10_A">Turtle</string>
    <string name="qustion_10_B">Canvas</string>
    <string name="qustion_10_C">Tkinter</string>
    <string name="qustion_10_D">Graphics</string>
    <string name="answer_10">Turtle</string>



</resources>