<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result1">
    <TextView
        android:id="@+id/tv_correct_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Correct_answer"
        android:textSize="30sp"
        android:textColor="@color/text_color"
        android:layout_above="@+id/tv_wrong_ans"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:background="@color/correct_answer"/>
    <TextView
        android:id="@+id/tv_wrong_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_answer"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:background="@color/Wrong_answer"
        android:textColor="@color/text_color"/>


    <Button
        android:id="@+id/btn_tryagain"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tryagin"
        android:backgroundTint="@color/btn"
        android:layout_below="@+id/tv_wrong_ans"
        android:layout_marginTop="20dp"/>

</RelativeLayout>